Add ability to reset the transformation frame even when it was loaded form the previous action

Fixes T2326
BUG:361852